--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
-COPY . .
+COPY .. .
 
 ENV FLASK_APP=app
 ENV FLASK_ENV=production
