--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,15 +1,32 @@
-# Dockerfile
+FROM python:3.9-slim-buster
 
-FROM python:3.9-slim
+# Set environment variables
+ENV PYTHONUNBUFFERED=1
 
+# Set working directory
 WORKDIR /app
 
+# Install system dependencies
+RUN apt-get update && apt-get install -y gunicorn
+
+# Install Python dependencies
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
-COPY .. .
+# Copy the application code
+COPY . .
 
-ENV FLASK_APP=app
+# Set environment variables for Flask
+ENV FLASK_APP=api.bridge:app
 ENV FLASK_ENV=production
 
-CMD ["gunicorn", "app:app", "--bind", "0.0.0.0:8000"]
+# Initialize and migrate the database
+RUN flask db init || true  # Initialize migrations if not already done
+RUN flask db migrate -m "Initial migration." || true  # Migrate database schema
+RUN flask db upgrade || true  # Apply migrations
+
+# Expose the port
+EXPOSE 8000
+
+# Set the command to run the application
+CMD ["gunicorn", "api.bridge:app", "--bind", "0.0.0.0:8000"]
