--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -21,22 +21,17 @@ ENV PYTHONUNBUFFERED=1
 WORKDIR /app
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y gunicorn nginx
+RUN apt-get update && apt-get install -y gunicorn
 
 # Install Python dependencies
-COPY requirements.txt requirements.txt
+COPY Backend/requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
 # Copy the backend application code
 COPY Backend .
 
 # Copy built frontend files from the previous stage
-COPY --from=build /app/frontend/build /app/frontend/build
-
-# Configure Nginx
-RUN rm /etc/nginx/sites-enabled/default
-COPY nginx.conf /etc/nginx/sites-available/bridge
-RUN ln -s /etc/nginx/sites-available/bridge /etc/nginx/sites-enabled/
+COPY --from=build /app/frontend/build /app/Frontend/bridge-ui/build
 
 # Set environment variables for Flask
 ENV FLASK_APP=api.bridge:app
@@ -51,4 +46,4 @@ RUN flask db upgrade || true  # Apply migrations
 EXPOSE 8000
 
 # Set the command to run the application
-CMD ["gunicorn", "api.bridge:app", "--bind", "0.0.0.0:8000", "--daemon"] && nginx -g 'daemon off;'
+CMD ["gunicorn", "api.bridge:app", "--bind", "0.0.0.0:8000"]
